Fixed Horizontal Scroll
- Partial fix for div heights

--- a/schedules/public/stylesheets/_custom.scss
+++ b/schedules/public/stylesheets/_custom.scss
@@ -5,8 +5,15 @@
     text-align: center;
 }
 
-// force div to fill the entire height of the screen
-.fill {
-    min-height: 100%;
-    height: 100%;
+html, body {
+  height: 100%;
+}
+
+.container-fluid, .row {
+  height: 100%;
+}
+
+#sidebar {
+  margin-bottom: -9999px;
+  padding-bottom: 9999px;
 }
