--- a/schedules/public/stylesheets/main.css
+++ b/schedules/public/stylesheets/main.css
@@ -5820,8 +5820,14 @@ button.close {
 .center-text {
   text-align: center; }
 
-.fill {
-  min-height: 100%;
+html, body {
   height: 100%; }
+
+.container-fluid, .row {
+  height: 100%; }
+
+#sidebar {
+  margin-bottom: -9999px;
+  padding-bottom: 9999px; }
 
 /*# sourceMappingURL=main.css.map */
